# ha-iec-sensor

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
config/: configuration.yaml
custom_components/iec_sensor/: api.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json  test.py
custom_components/iec_sensor/translations/: en.json
