[metadata]
name = ha-iec-sensor
version = 0.0.1
author = Lior Tamam
author_email = leo212@gmail.com
description = IEC data poller sensor for HomeAssistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leo212/ha-iec-sensor
project_urls =
    Repository = https://github.com/leo212/ha-iec-sensor
    Bug Tracker = https://github.com/leo212/ha-iec-sensor/issues


[options]
package_dir =
    homeassistant-historical-sensor = homeassistant_historical_sensor
packages = find:
python_requires = >=3.10


[options.packages.find]
where =
